# uorfin-jus

./: .env.example  .gitignore  .requirements.txt  README.md  check_env.sh  core_client.py  run.sh  uorfin_charter.yaml
client/: chat_direct.py  test_client.py
core/: CMakeLists.txt  openrouter_adapter.py  uorfin_core.cpp
gcode/: gen_1867499809360849656.gcode  gen_2326939196902678312.gcode  gen_2414633374493271177.gcode  gen_2935012335659043068.gcode  gen_3171763283147266657.gcode  gen_346792676125713943.gcode  gen_6019552717044747362.gcode  gen_6427117215250104263.gcode  gen_7972668006747332493.gcode  sphere_r10.0.gcode  unknown.gcode
output/: cube_25.0.stl  gen_1867499809360849656.stl  gen_2326939196902678312.stl  gen_2414633374493271177.stl  gen_2935012335659043068.stl  gen_3171763283147266657.stl  gen_346792676125713943.stl  gen_3613598570395785505.stl  gen_6019552717044747362.stl  gen_6427117215250104263.stl  gen_7972668006747332493.stl  gen_8727618504934644468.stl  motor_d3.0_h17.0.stl  motor_d50_h30_s12p14.stl  sphere_r10.0.stl  temp.scad  unknown.stl
skills/: cerebellum_skill.py  charter_skill.py  council_skill.py  dual_hemisphere_cloud.py  hello_skill.py  llm_skill.py  memory_skill.py  orchestrator_skill.py  picogk_skill.py  printer_skill.py  ros2_skill.py  slicer_skill.py
web/: web_server.py
web/static/models/: spot_micro.glb
web/templates/: index.html
